added additive effect figures

--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -784,7 +784,8 @@ allele $2$ has a relative fitness of $1+s$ and $1-s$ on either side of
 the environmental change at $x=0$.} \label{fig:cline}
 \end{figure}
 
-
+\paragraph{The cline in allele frequency associated with a sharp
+  environmental transition.}
 To make progress lets consider a simple model of location adaptation where the
 environment abruptly changes. Specifically we assume that $\gamma(x)= 1$ for
 $x<0$ and $\gamma(x)= -1$ for $x \geq 0$, i.e. our allele $2$ has a selective
@@ -830,5 +831,10 @@ can be defined in a number of different ways. One simple way to define
 the cline width, which is easy to define but perhaps hard to measure accurately, is the slope (i.e. the
 tangent) of $q(x)$ at $x=0$. Under this definition the cline width is approximately $0.6
 \sigma/\sqrt{s}$.\\
+
+\paragraph{The rate of spatial spread of a beneficial allele.}
+Consider a beneficial mutation that has arisen in a specific spatial
+location and has begun to spread geographically. 
+
 
 \newpage
