--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -687,6 +687,10 @@ so that migration is playing to role of mutation and so
 migration-selection balance (at least under strong selection) is
 analogous to mutation selection balance.\\
 
+We can use this same model by analogy for the case of
+migration-selection balance in a diploid model, in that case we replace
+our haploid $s$ by the cost to heterozygotes $hs$.
+
 \begin{tcolorbox} 
 \begin{question}
 You are investigating a small river population of sticklebacks, which receives infrequent migrants from a very large marine population. At a set of (putatively) neutral biallelic markers the freshwater population has frequencies:
