--- a/chapter-06.tex
+++ b/chapter-06.tex
@@ -79,7 +79,8 @@ p_F = 2s.
 \end{equation}
 Thus even an allele with a $1\%$ selection coefficient has a $98\%$
 probability of being lost when it is first introduced into the
-population by mutation. \\
+population by mutation. This style of argument is modeling the fate of
+our allele using branching processes.\\
 
 \begin{figure}
 \begin{center}
@@ -96,7 +97,10 @@ the population, is
 \begin{equation}
 p_F = 2 (1-h)s \label{eqn:diploid_escape}
 \end{equation}
-for $h>0$.\\
+for $h>0$. Note this is a slightly different parameterization from
+our diploid model above.\\
+
+
 \begin{tcolorbox} 
 \begin{question}
 Melanic squirrels suffer a higher rate of predation (due to hawks) than normally pigmented squirrels. Melanism is due to a dominant, autosomal mutation. The frequency of melanic squirrels at birth is $4 \times 10^{-5}$.\\
@@ -160,7 +164,9 @@ drift will dominate the fate of our allele. \\
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figures/prob_fix_diffusion.pdf}
 \end{center}
-\caption{} \label{fig:prob_fix_diffusion}
+\caption{The probability of the fixation of a new mutation with
+  selection coefficient $s$ ($h=1/2$) in a diploid population of effective
+  size $N_e$. The dashed line gives the infinite population solutub} \label{fig:prob_fix_diffusion}
 \end{figure}
 
 To make further progress on understanding the fate of alleles with
@@ -187,11 +193,17 @@ In the case where $Ns$ close to $1$ then
 \begin{equation}
 \pi(\frac{1}{2N}) \approx \frac{s}{1-e^{-2Ns}} \label{eqn:escape_from_intro}
 \end{equation}
-this is greater than our result $p_F=s$ from the branching process argument, increasingly so for smaller $N$. 
+this is greater than our result $p_F=s$ from the branching process
+argument (using our additive model of $h=1/2$), increasingly so for smaller $N$. 
 Why is this?  The reason why is that $p_F$ is really the probability
 of “never being lost” in an infinitely large population. So to persist
 indefinitely the allele has to escape loss permanently, by never being
-absorbed by the zero state. When the population size is finite, to fix we only need to reach a size 2N individuals. Weakly beneficial mutations (Ns~1) are slightly more likely to fix than the s probability, as they only have to reach 2N to never be lost.
+absorbed by the zero state. When the population size is finite, to fix
+we only need to reach a size 2N individuals. Weakly beneficial
+mutations (Ns~1) are slightly more likely to fix than the s
+probability, as they only have to reach 2N to never be lost.
+
+
 %Well in small populations selected alleles spend a
 %somewhat shorter time segregating (especially at low frequencies), and so are
 %slightly less susceptible to genetic drift. \\
@@ -217,16 +229,17 @@ fixation prob. of alleles with |Ns|~1. The absorption of alleles at 2N
 copies can also be modeled in finite individual models (i.e. not the
 diffusion limit), but we will not go into that here. 
 
+
 \begin{tcolorbox} 
 \begin{question}
-\includegraphics[width=0.3\textwidth]{figures/haldanes_sieve.png}
-
 `Haldane's sieve’ is the name for the idea that the mutations that contribute to adaptation are likely to be dominant or at least co-dominant. \\
 \bf{A)} Briefly explain this argument with a verbal model relating to the
 results we’ve developed in the last two chapters. \\
 {\bf B)} Haldane’s sieve is thought to be less important for adaptation from previously deleterious standing variation, than adaptation from new mutation. Can you explain the intuition behind of this idea?\\
-{\bf C)} Haldane’s sieve is likely to be less important in inbred
-populations. Why is that? \\
+{\bf C)} Haldane’s sieve is likely to be less important in inbred,
+e.g. selfing, populations. Why is this? \\
+\includegraphics[width=0.3\textwidth]{figures/haldanes_sieve.png}
+
 \end{question}
 \end{tcolorbox}
 
@@ -275,5 +288,7 @@ doing so we find that
 \begin{equation}
 \pi(p) = \frac{1-e^{-2Ns p }}{1-e^{-2Ns}}
 \end{equation}
-
+This proof can be extended
+to alleles with arbitrary dominance, however, this does not lead to a
+analytically tractable expression so we do not pursue this here. 
 
