--- a/chapter-06.tex
+++ b/chapter-06.tex
@@ -236,7 +236,7 @@ diffusion limit), but we will not go into that here.
 \begin{tcolorbox} 
 \begin{question}
 `Haldane's sieve’ is the name for the idea that the mutations that contribute to adaptation are likely to be dominant or at least co-dominant. \\
-\bf{A)} Briefly explain this argument with a verbal model relating to the
+{\bf A)} Briefly explain this argument with a verbal model relating to the
 results we’ve developed in the last two chapters. \\
 {\bf B)} Haldane’s sieve is thought to be less important for adaptation from previously deleterious standing variation, than adaptation from new mutation. Can you explain the intuition behind of this idea?\\
 {\bf C)} Haldane’s sieve is likely to be less important in inbred,
