added stochastic pngs

--- a/chapter-06.tex
+++ b/chapter-06.tex
@@ -188,8 +188,9 @@ nicely gives
 us back our result that we obtained above
 (eqn. \eqref{eqn:diploid_escape}). Our probability of fixation
 (eqn. \eqref{eqn:new_mut_prob_fixed}) is plotted as a function of $s$
-and $N$ in Figure \ref{fig:prob_fix_diffusion}. If we take the
-limit $s \rightarrow 0$ then we recover our neutral fixation
+and $N$ in Figure \ref{fig:prob_fix_diffusion}. To recover our neutral
+result we can take the
+limit $s \rightarrow 0$ to obtain our neutral fixation
 probability $1/(2N)$. \\
 
 In the case where $Ns$ close to $1$ then
