changed over stoch to png

--- a/chapter-06.tex
+++ b/chapter-06.tex
@@ -84,7 +84,7 @@ our allele using branching processes.\\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{figures/Proof_of_pL_2s}
+\includegraphics[width=\textwidth]{figures/Proof_of_pL_2s.png}
 \end{center}
 \caption{} \label{fig:Proof_of_pL_2s}
 \end{figure}
@@ -162,7 +162,7 @@ much less than the variance induced by drift. So if $Ns \ll 1$ then
 drift will dominate the fate of our allele. \\
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.6\textwidth]{figures/prob_fix_diffusion.pdf}
+\includegraphics[width=0.6\textwidth]{figures/prob_fix_diffusion.png}
 \end{center}
 \caption{The probability of the fixation of a new mutation with
   selection coefficient $s$ ($h=1/2$) in a diploid population of effective
