--- a/chapter-06.tex
+++ b/chapter-06.tex
@@ -47,7 +47,7 @@ extinct (Figure \ref{fig:Proof_of_pL_2s}C).
 probability $P_k$), in which case with probability $p_L^k$  all of
 these copies eventually go extinct (e.g. Figure \ref{fig:Proof_of_pL_2s}D).
 \end{enumerate}
-summing over this probabilities we see that
+summing over these probabilities we see that
 \begin{eqnarray}
 p_L &= \sum_{k=0}^{\infty} P_k p_L^{k}  \nonumber \\
 &=  \sum_{k=0}^{\infty} \frac{(1+s)^ke^{-(1+s)}}{k!} p_L^{k} \nonumber
@@ -79,8 +79,7 @@ p_F = 2s.
 \end{equation}
 Thus even an allele with a $1\%$ selection coefficient has a $98\%$
 probability of being lost when it is first introduced into the
-population by mutation. This style of argument is modeling the fate of
-our allele using branching processes.\\
+population by mutation.\\
 
 \begin{figure}
 \begin{center}
